change tooltip if the number of unread msgs changed to zero

--- a/.gitignore
+++ b/.gitignore
@@ -58,5 +58,7 @@ target/
 
 # file that contains usernames and passwords
 credentials
+# file that contains settings
+settings
 # ignore backup files
 *~
