create a bash script to handle the startup of the mail checker

--- a/Mail Checker.desktop
+++ b/Mail Checker.desktop
@@ -5,7 +5,7 @@ Type=Application
 Encoding=UTF-8
 Name=Mail Checker
 Comment=A very simple script that checks for unread mail
-Exec=sh -c "python2 mail_checker.py"
+Exec=/bin/bash mail_checker
 Icon=mailIcon.png
 Terminal=false
 Name[en_US]=Mail Checker
